--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   path_provider: ^2.1.3
   flutter_bloc: ^8.1.4
   permission_handler: ^11.3.1
+  sensors_plus: ^4.0.2
+  fl_chart: ^0.69.0
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
